--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,29 +7,32 @@ on:
   workflow_dispatch:
 
 jobs:
-
   build:
     name: Create Android Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Download Android keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.2
         with:
           fileName: upload-keystore.jks
           encodedString: ${{ secrets.KEYSTORE_BASE64 }}
+
       - name: Create key.properties
         run: |
           echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: "12.x"
           cache: gradle
+
       - uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.16.2"
@@ -48,13 +51,15 @@ jobs:
           PACKAGE_NAME=$(grep -Po "applicationId\s+['\"]\K[^'\"]+" android/app/build.gradle)
           VERSION_NAME=$(grep -Po "version: \K\d+\.\d+\.\d+" pubspec.yaml)
           BUILD_NUMBER=$(grep -Po "version: \K\d+\.\d+\.\d+\+\K\d+" pubspec.yaml)
+          TAG_NAME="v${VERSION_NAME}+${BUILD_NUMBER}"
           FILE_NAME="${PACKAGE_NAME}.v${VERSION_NAME}+${BUILD_NUMBER}.aab"
           echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
+          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
           echo "::set-output name=FILE_NAME::$FILE_NAME"
+          echo "::set-output name=TAG_NAME::$TAG_NAME"
 
       - name: Rename Build File
-        run: |
-          mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
+        run: mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
 
       - name: Create Release
         id: create_release
@@ -62,8 +67,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.extract_info.outputs.VERSION_NAME }}
-          release_name: Release ${{ steps.extract_info.outputs.VERSION_NAME }}
+          tag_name: ${{ env.TAG_NAME }}
+          release_name: Release ${{ env.TAG_NAME }}
           draft: false
           prerelease: false
 
