--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,11 @@ jobs:
       - name: Get dependencies
         run: flutter pub get
 
-      - name: Start Android Release Build
+      - name: Build Android Bundle
         run: flutter build appbundle
+
+      - name: Build Android APK
+        run: flutter build apk --release
 
       - name: Extract Package Name and Version
         id: extract_info
@@ -62,29 +65,21 @@ jobs:
           echo "::set-output name=FILE_NAME::$FILE_NAME"
           echo "::set-output name=TAG_NAME::$TAG_NAME"
 
-      - name: Rename Build File
+      - name: Rename BUNDLE File
         run: mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.TAG_NAME }}
-          release_name: Release ${{ env.TAG_NAME }}
-          draft: false
-          prerelease: false
+      - name: Rename APK File
+        run: mv build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/${{ steps.extract_info.outputs.FILE_NAME }}.apk
 
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
+            build/app/outputs/apk/release/${{ steps.extract_info.outputs.FILE_NAME }}.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
-          asset_name: ${{ steps.extract_info.outputs.FILE_NAME }}
-          asset_content_type: application/octet-stream
 
   # deploy:
   #   name: Deploy Android Build
