--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,10 +62,15 @@ jobs:
           FILE_NAME="${PACKAGE_NAME}.v${VERSION_NAME}+${BUILD_NUMBER}.aab"
           echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
+          echo "FILE_NAME=${FILE_NAME}" # For debugging
+          echo "TAG_NAME=${TAG_NAME}"   # For debugging
 
 
       - name: Rename BUNDLE File
-        run: mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
+      
+        run: |
+         echo "Renaming to ${FILE_NAME}" 
+         mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
 
       - name: Rename APK File
         run: mv build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/${{ steps.extract_info.outputs.FILE_NAME }}.apk
