--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
           VERSION_NAME=$(grep -Po "version: \K\d+\.\d+\.\d+" pubspec.yaml)
           BUILD_NUMBER=$(grep -Po "version: \K\d+\.\d+\.\d+\+\K\d+" pubspec.yaml)
           TAG_NAME="v${VERSION_NAME}+${BUILD_NUMBER}"
-          FILE_NAME="${PACKAGE_NAME}.v${VERSION_NAME}+${BUILD_NUMBER}.aab"
+          FILE_NAME="${PACKAGE_NAME}.v${VERSION_NAME}+${BUILD_NUMBER}"
           echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
           echo "FILE_NAME=${FILE_NAME}" # For debugging
@@ -70,10 +70,10 @@ jobs:
       
         run: |
          echo "Renaming to ${FILE_NAME}" 
-         mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
+         mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/$FILE_NAME.aab
 
       - name: Rename APK File
-        run: mv build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/${{ steps.extract_info.outputs.FILE_NAME }}.apk
+        run: mv build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/$$FILE_NAME.apk
 
       - name: Release
         uses: softprops/action-gh-release@v1
