--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
          mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/$FILE_NAME.aab
 
       - name: Rename APK File
-        run: mv build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/$$FILE_NAME.apk
+        run: mv build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/$FILE_NAME.apk
 
       - name: Release
         uses: softprops/action-gh-release@v1
