--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Android Release
 
 on:
   push:
-    branches: [ "main" ]
-    
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 permissions:
@@ -18,7 +18,6 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download Android keystore
-        id: android_keystore
         uses: timheuer/base64-to-file@v1.2
         with:
           fileName: upload-keystore.jks
@@ -42,7 +41,7 @@ jobs:
           flutter-version: "3.16.2"
           channel: 'stable'
           cache: true
-      
+
       - name: Get dependencies
         run: flutter pub get
 
@@ -53,24 +52,16 @@ jobs:
         run: flutter build apk --release
 
       - name: Extract Package Name and Version
-        id: extract_info
         run: |
           PACKAGE_NAME=$(grep -Po "applicationId\s+['\"]\K[^'\"]+" android/app/build.gradle)
           VERSION_NAME=$(grep -Po "version: \K\d+\.\d+\.\d+" pubspec.yaml)
           BUILD_NUMBER=$(grep -Po "version: \K\d+\.\d+\.\d+\+\K\d+" pubspec.yaml)
-          TAG_NAME="v${VERSION_NAME}+${BUILD_NUMBER}"
           FILE_NAME="${PACKAGE_NAME}.v${VERSION_NAME}+${BUILD_NUMBER}"
           echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
-          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
           echo "FILE_NAME=${FILE_NAME}" # For debugging
-          echo "TAG_NAME=${TAG_NAME}"   # For debugging
 
-
-      - name: Rename BUNDLE File
-      
-        run: |
-         echo "Renaming to ${FILE_NAME}" 
-         mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/$FILE_NAME.aab
+      - name: Rename AAB File
+        run: mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/$FILE_NAME.aab
 
       - name: Rename APK File
         run: mv build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/$FILE_NAME.apk
@@ -79,10 +70,11 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            build/app/outputs/bundle/release/${{ steps.extract_info.outputs.FILE_NAME }}
-            build/app/outputs/apk/release/${{ steps.extract_info.outputs.FILE_NAME }}.apk
+            build/app/outputs/bundle/release/$FILE_NAME.aab
+            build/app/outputs/apk/release/$FILE_NAME.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
   # deploy:
   #   name: Deploy Android Build
