--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Download Android keystore
+        id: android_keystore
         uses: timheuer/base64-to-file@v1.2
         with:
           fileName: upload-keystore.jks
@@ -29,7 +30,6 @@ jobs:
           echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
@@ -41,7 +41,7 @@ jobs:
           flutter-version: "3.16.2"
           channel: 'stable'
           cache: true
-
+      
       - name: Get dependencies
         run: flutter pub get
 
@@ -52,17 +52,22 @@ jobs:
         run: flutter build apk --release
 
       - name: Extract Package Name and Version
+        id: extract_info
         run: |
           PACKAGE_NAME=$(grep -Po "applicationId\s+['\"]\K[^'\"]+" android/app/build.gradle)
           VERSION_NAME=$(grep -Po "version: \K\d+\.\d+\.\d+" pubspec.yaml)
           BUILD_NUMBER=$(grep -Po "version: \K\d+\.\d+\.\d+\+\K\d+" pubspec.yaml)
+          TAG_NAME="v${VERSION_NAME}+${BUILD_NUMBER}"
           FILE_NAME="${PACKAGE_NAME}.v${VERSION_NAME}+${BUILD_NUMBER}"
           echo "FILE_NAME=$FILE_NAME" >> $GITHUB_ENV
+          echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
           echo "FILE_NAME=${FILE_NAME}" # For debugging
-
-      - name: Rename AAB File
-        run: mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/$FILE_NAME.aab
-
+          echo "TAG_NAME=${TAG_NAME}"   # For debugging
+      - name: Rename BUNDLE File
+      
+        run: |
+         echo "Renaming to ${FILE_NAME}" 
+         mv build/app/outputs/bundle/release/app-release.aab build/app/outputs/bundle/release/$FILE_NAME.aab
       - name: Rename APK File
         run: mv build/app/outputs/apk/release/app-release.apk build/app/outputs/apk/release/$FILE_NAME.apk
 
