--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dobo_widgets:
-    git: git@github.ijas:app-cookee/dobo_widgets.git
+  # dobo_widgets:
+  #   git: git@github.ijas:app-cookee/dobo_widgets.git
   # youtube_player_iframe: ^4.0.4
   the_youtube_player:
     git: https://github.com/app-cookee/the_youtube_player
@@ -40,6 +40,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  tutorial_coach_mark: ^1.2.11
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
